log
ju.,  5 de may. de 2022 12:25:55: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
db2dbeb
ju.,  5 de may. de 2022 12:36:19: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:15: error: unused variable 'aux' [-Werror=unused-variable]
    heapElem * aux = pq->heapArray;
               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
1438112
ju.,  5 de may. de 2022 12:36:31: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|3
total_score: 10/70
3a44559
ju.,  5 de may. de 2022 12:37:48: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
eae5eb6
ju.,  5 de may. de 2022 12:40:05: 
 tests:  2|2
total_score: 20/70
464421d
